2005-10-24  Martin Baulig  <martin@ximian.com>

	* TypeBuilder.cs (TypeBuilder.IsGenericTypeDefinition): Override this.

2005-10-03  Atsushi Enomoto  <atsushi@ximian.com>

	* CustomAttributeBuilder.cs : internal attributes should be allowed.
	  Fixed bug #75723.

2005-09-26  Marek Safar  <marek.safar@seznam.cz>

	* PropertyBuilder.cs: Throw NotSupportedException for unsupported
	methods.

2005-09-14  Martin Baulig  <martin@ximian.com>

	* LocalBuilder.cs
	(LocalBuilder.Mono_GetLocalIndex): New static internal method;
	same as the .NET 2.0 property `LocalIndex'.

Mon Sep 5 18:08:09 CEST 2005 Paolo Molaro <lupus@ximian.com>

	* EventBuilder.cs, FieldBuilder.cs, MethodBuilder.cs, TypeBuilder.cs,
	PropertyBuilder.cs: take care of the SpecialName attribute (bug #75768).

2005-09-01  Raja R Harinath  <rharinath@novell.com>

	* CustomAttributeBuilder.cs (get_umarshal): Don't cause a nullref
	exception when passed a custom marshaller type that belongs to the
	assembly being built.  When user specifies MarshalType rather than
	MarshalTypeRef, don't attempt to resolve the type.

2005-08-31  Raja R Harinath  <rharinath@novell.com>

	* CustomAttributeBuilder.cs (get_umarshal): Fix typo.  The name of
	the field is "SizeParamIndex", not "SizeSizeParamIndex".

	* ParameterBuilder.cs (SetCustomAttribute) [MarshalAsAttribute]:
	Set ParameterAttributes.HasFieldMarshal flag.

2005-08-19  Zoltan Varga  <vargaz@freemail.hu>

	* DynamicMethod.cs (CreateDelegate): Don't cache the delegate since it
	needs to be different for each target.
	
	* DynamicMethod.cs (CreateDynMethod): Call ilgen.label_fixup ().

	* DynamicMethod.cs (AddRef): Reserve every second ref slot for use by the
	runtime.

2005-08-05  Gert Driesen  <drieseng@users.sourceforge.net>

	* AssemblyBuilder.cs: Implement _AssemblyBuilder, CA fixes to 
	correspond with MS.NET
	* ConstructorBuilder.cs: Implement _ConstructorBuilder, CA fixes to 
	correspond with MS.NET